# homex

./: .gitignore  Cargo.toml
backend/: .gitignore  Cargo.toml
backend/src/: main.rs
frontend/: index.html  package.json  vite.config.ts  watch
frontend/src/: App.tsx
homex/: package.json
homex/src/: App.tsx
src/: app.rs  lib.rs  main.rs
src/app/: home.rs  icons.rs  layout.rs  mockary.rs  model.rs  movies.rs  resource_view.rs  search.rs  series.rs  settings.rs  upload.rs  video_player.rs
src/app/series/: details.rs  listing.rs
