[package]
name = "homex_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = {version = "1.53",features = ["full"]}
tower-http = { version = "0.7", default-features = false, features = [
    "compression-br",
    "cors",
    "fs",
    "trace",
] }
tracing = "0.1"
tracing-subscriber = "0.3"
turso = "0.7"
